<resources>
    <string name="app_name">RegistreCom Mobile</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="signUp_button">Sign Up</string>
    <string name="confirmpassword_hint">Confirm password</string>
    <string name="submitrequest">Submit Request</string>
    <string name="viewrequeststatus">View Request Status</string>
    <string name="resources">Resources</string>
    <string name="clientsupport">Client Support</string>
    <string name="companyname">Company Name</string>
    <string name="companynamehint">Enter your company name</string>
    <string name="address">Address</string>
    <string name="addresshint">Enter your address</string>
    <string name="typeofactivity">Type of Activity</string>
    <string name="typeofactivityhint">Enter type of activity</string>
    <string name="fullname">Full Name</string>
    <string name="fullnamehint">Enter full name</string>
    <string name="companyinformation">Company Information</string>
    <string name="phonenumber">Phone Number</string>
    <string name="companyemail">Company E-mail Address</string>
    <string name="personalinfo">Personal Information</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="nationality">Nationality</string>
    <string name="idnumber">ID Number</string>
    <string name="declaration">I declare that all information provided is accurate and complete.</string>
    <string name="logout">Logout</string>
    <string name="state">State</string>
    <string name="requestid">Request ID</string>
    <string name="faq_question_1">What is the purpose of your application?</string>
    <string name="faq_question_2">How can I submit a request?</string>
    <string name="faq_question_3">What information do I need to provide when submitting a request?</string>
    <string name="faq_question_4">How long does it take to process a request?</string>
    <string name="faq_question_5">Can I edit my submitted request?</string>

    <string name="faq_answer_1">The purpose of our application is to streamline the process of submitting and managing requests for various purposes.</string>
    <string name="faq_answer_2">You can submit a request by navigating to the "Submit Request" section and filling out the required form.</string>
    <string name="faq_answer_3">When submitting a request, you will need to provide information such as company details, personal information, and specific details related to your request type.</string>
    <string name="faq_answer_4">The processing time for a request may vary, and you will be notified once your request is processed.</string>
    <string name="faq_answer_5">Once a request is submitted, you cannot directly edit it. If you need to make changes, please contact our support team.</string>

    <string name="advice1">Ensure all required fields are filled out.</string>
    <string name="advice2">Double-check your contact information for accuracy.</string>
    <string name="advice3">Provide detailed and clear information in each field.</string>
    <string name="advice4">Follow any specific instructions provided for each form.</string>
    <string name="advice5">Review your entries before submitting to avoid errors.</string>
    <string name="login_button_back">Back to Login</string>
    <string name="cancelrequest">Cancel</string>
    <string name="faqexp">If you have any questions, you might find them here</string>
    <string name="faq">FAQ</string>
    <string name="adviceexp">If you need advice on how to correctly fill out the forms, refer to this section</string>
    <string name="advice">Advice</string>
    <string name="otherresexp">Find useful links here</string>
    <string name="otherres">Other Resources</string>
    <string name="callexp">Call one of our expert assistants</string>
    <string name="textexp">Or text them</string>
    <string name="texthint">Hello, I need assistance with...</string>
    <string name="call" translatable="false">✆</string>
    <string name="text" translatable="false">✍︎</string>
    <string name="workhours">** Please note that our assistance center is open Sunday to Thursday from 8am to 5pm, except on holidays.</string>
    <string name="patience">** Phone lines can be busy sometimes, so your call might be put on hold.</string>
    <string name="request">Request Status for Request N°</string>
    <string name="pending">Pending: Request has been submitted succesfully and is waiting to be reviewed.</string>
    <string name="examen">Under Review: Request is being reviewed.</string>
    <string name="accepted">Accepted: Request has been approved. Please head to the concerned authorities to collect your register.</string>
    <string name="rejected">Rejected: Request has been rejected. Please head over to the \'Contact\' section for further inquiries.</string>
    <string name="pdf">Upload Documents</string>
    <string name="choosepdf">Choose PDF File</string>
</resources>