<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/appbkg"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/callexp"
                android:id="@+id/faqexp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/brand_blue"
                android:gravity="center_horizontal" />


            <Button
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="60dp"
                android:id="@+id/buttonCallSupport"
                android:text="@string/call"
                android:textSize="30sp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/brand_blue"
                app:cornerRadius = "20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textexp"
                android:id="@+id/adviceexp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/brand_light_blue"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/editTextMessage"
                android:background="@drawable/custom_edittext2"
                android:drawablePadding="8dp"
                android:hint="@string/texthint"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="15dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="60dp"
                android:id="@+id/buttonTextSupport"
                android:text="@string/text"

                android:textSize="30sp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/brand_light_blue"
                app:cornerRadius = "20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView

        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_height="wrap_content"
        android:textColor="@color/brand_grey"
        android:text="@string/workhours"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:textColor="@color/brand_grey"
        android:text="@string/patience"/>



</LinearLayout>